# edf-2025

./: README.md
SimCLR/: Dockerfile  config.yaml  convert_onnx_to_hef.py  convert_to_onnx_encoder.py  main.py  requirements copie.txt  requirements.txt  simclr.ipynb  test_onnx_model.py
hardware/: 00_init.sh  01_init.sh  02_ros_instal.sh  03_drone_detect.sh
ros_ws/src/: package.xml  setup.py
ros_ws/src/vns_system/vns_system/: vns_node.py
