<?xml version="1.0"?>
<package format="3">
  <name>vns_system</name>
  <version>0.0.1</version>
  <description>Mocked Visual Navigation System</description>
  <maintainer email="n.filipchuk@gmail.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
